--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
+    <h1>Este es el titulo atractivo e interesante</h1>
     <p>Y este es el parrafo de inicio</p>
 </body>
 </html>
