--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
-    <h1>Este es el titulo atractivo e interesante</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="cabecera">Aqui inicia la cabereca</div>
+        <div id="post">
+            <h1>Este es el titulo atractivo e interesante</h1>
+            <p>Y este es el parrafo de inicio</p>
+        </div>
+    </div>
 </body>
 </html>
