Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="cabecera">Aqui inicia la cabereca</div>
+        <div id="cabecera">Cabecera</div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante</h1>
             <p>Y este es el parrafo de inicio</p>
