--- a/blogpost.html
+++ b/blogpost.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Este es el titulo atractivo e interesante</h1>
     <p>Y este es el parrafo de inicio</p>
+    <p>Este es un nuevo parrafo de contenido</p>
 </body>
 </html>
