--- a/blogpost.html
+++ b/blogpost.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div id="container">
-        <div id="cabecera">Cabecera</div>
+        <div id="cabecera">Estoy en Master</div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante</h1>
             <p>Y este es el parrafo de inicio</p>
+            <p>Y voy a fusionar master y cabecera en master</p>
         </div>
     </div>
 </body>
